--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+PFzHhRBViPTFIqVbkmGOoE4XhiR7ZT21xLnNmTRE4s=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,21 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+# DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+# MONGO_DB_URI="mongodb+srv://sunilbesra2691_db_user:edMk6jfBOQTTvFmr@cluster0.qubm1pt.mongodb.net/laravel-beanstalk?retryWrites=true&w=majority"
+
+
+DB_CONNECTION=mongodb
+DB_URI=mongodb://adminuser:strongpassword@127.0.0.1:27017/mydb?authSource=admin
+DB_DATABASE=mydb
+
+
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +72,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+QUEUE_CONNECTION=beanstalkd
+
+# Beanstalkd specific settings
+BEANSTALKD_QUEUE_HOST=127.0.0.1
+BEANSTALKD_QUEUE=default
+BEANSTALKD_QUEUE_RETRY_AFTER=90
+
